--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.0.13",
     "nanoid": "^3.1.30",
     "nodemailer": "^6.7.1",
+    "otp-generator": "^3.0.0",
     "pino": "^7.2.0",
     "pino-pretty": "^7.2.0",
     "zod": "^3.11.6"
